// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button (Highlight) Snapshots renders a large, highlight button with a data label 1`] = `null`;

exports[`Button (Highlight) Snapshots renders a large, highlight button with an icon 1`] = `
.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #f0f1f2;
  border-color: #f0f1f2;
  color: #005cb9;
  min-width: 112px;
  height: 48px;
  padding: 0 18px;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3 span .wd-icon-fill,
.emotion-3 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #005cb9;
}

.emotion-3:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #005cb9;
}

.emotion-3:focus span .wd-icon-fill,
.emotion-3:focus span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-3:hover:focus {
  background-color: #dfe2e6;
}

.emotion-3:active,
.emotion-3:focus:active,
.emotion-3:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #005cb9;
}

.emotion-3:active span .wd-icon-fill,
.emotion-3:focus:active span .wd-icon-fill,
.emotion-3:hover:active span .wd-icon-fill,
.emotion-3:active span .wd-icon-accent,
.emotion-3:focus:active span .wd-icon-accent,
.emotion-3:hover:active span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-3:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #005cb9;
}

.emotion-3:hover span .wd-icon-fill,
.emotion-3:hover span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #5e6a75;
}

.emotion-3:disabled span .wd-icon-fill,
.emotion-3:active:disabled span .wd-icon-fill,
.emotion-3:focus:disabled span .wd-icon-fill,
.emotion-3:hover:disabled span .wd-icon-fill,
.emotion-3:disabled span .wd-icon-accent,
.emotion-3:active:disabled span .wd-icon-accent,
.emotion-3:focus:disabled span .wd-icon-accent,
.emotion-3:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
}

.emotion-2:hover:active {
  background-color: transparent;
}

<button
  className="emotion-3"
>
  <span
    className="emotion-1"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-edit wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267zm11.445-9.105l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M14.046 8.45L5.93 16.567 6 17.91l1.344.07 8.118-8.117-1.415-1.414zm1.415-1.415l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414zM4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <span
    className="emotion-2"
  >
    Button
  </span>
</button>
`;

exports[`Button (Highlight) Snapshots renders a large, highlight button with an icon and data label 1`] = `
.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #f0f1f2;
  border-color: #f0f1f2;
  color: #005cb9;
  min-width: 112px;
  height: 48px;
  padding: 0 18px;
}

.emotion-4:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-4:disabled,
.emotion-4:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-4 span .wd-icon-fill,
.emotion-4 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #005cb9;
}

.emotion-4:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #005cb9;
}

.emotion-4:focus span .wd-icon-fill,
.emotion-4:focus span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-4:hover:focus {
  background-color: #dfe2e6;
}

.emotion-4:active,
.emotion-4:focus:active,
.emotion-4:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #005cb9;
}

.emotion-4:active span .wd-icon-fill,
.emotion-4:focus:active span .wd-icon-fill,
.emotion-4:hover:active span .wd-icon-fill,
.emotion-4:active span .wd-icon-accent,
.emotion-4:focus:active span .wd-icon-accent,
.emotion-4:hover:active span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-4:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #005cb9;
}

.emotion-4:hover span .wd-icon-fill,
.emotion-4:hover span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-4:disabled,
.emotion-4:active:disabled,
.emotion-4:focus:disabled,
.emotion-4:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #5e6a75;
}

.emotion-4:disabled span .wd-icon-fill,
.emotion-4:active:disabled span .wd-icon-fill,
.emotion-4:focus:disabled span .wd-icon-fill,
.emotion-4:hover:disabled span .wd-icon-fill,
.emotion-4:disabled span .wd-icon-accent,
.emotion-4:active:disabled span .wd-icon-accent,
.emotion-4:focus:disabled span .wd-icon-accent,
.emotion-4:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 8px;
}

.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-2 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding: 0 12px;
}

.emotion-2:hover:active {
  background-color: transparent;
}

.emotion-3 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 400;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding-right: 12px;
}

.emotion-3:hover:active {
  background-color: transparent;
}

<button
  className="emotion-4"
>
  <span
    className="emotion-1"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-edit wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267zm11.445-9.105l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M14.046 8.45L5.93 16.567 6 17.91l1.344.07 8.118-8.117-1.415-1.414zm1.415-1.415l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414zM4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <span
    className="emotion-2"
  >
    Button
  </span>
  <span
    className="button-label-data emotion-3"
  >
    1:00
  </span>
</button>
`;

exports[`Button (Highlight) Snapshots renders a medium, highlight button with an icon 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-3 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #f0f1f2;
  border-color: #f0f1f2;
  color: #005cb9;
  min-width: 96px;
  height: 40px;
  padding: 0 14px;
}

.emotion-3:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-3:disabled,
.emotion-3:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-3 span .wd-icon-fill,
.emotion-3 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #005cb9;
}

.emotion-3:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #005cb9;
}

.emotion-3:focus span .wd-icon-fill,
.emotion-3:focus span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-3:hover:focus {
  background-color: #dfe2e6;
}

.emotion-3:active,
.emotion-3:focus:active,
.emotion-3:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #005cb9;
}

.emotion-3:active span .wd-icon-fill,
.emotion-3:focus:active span .wd-icon-fill,
.emotion-3:hover:active span .wd-icon-fill,
.emotion-3:active span .wd-icon-accent,
.emotion-3:focus:active span .wd-icon-accent,
.emotion-3:hover:active span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-3:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #005cb9;
}

.emotion-3:hover span .wd-icon-fill,
.emotion-3:hover span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-3:disabled,
.emotion-3:active:disabled,
.emotion-3:focus:disabled,
.emotion-3:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #5e6a75;
}

.emotion-3:disabled span .wd-icon-fill,
.emotion-3:active:disabled span .wd-icon-fill,
.emotion-3:focus:disabled span .wd-icon-fill,
.emotion-3:hover:disabled span .wd-icon-fill,
.emotion-3:disabled span .wd-icon-accent,
.emotion-3:active:disabled span .wd-icon-accent,
.emotion-3:focus:disabled span .wd-icon-accent,
.emotion-3:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-3:not([disabled]):focus,
.emotion-3:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 4px;
}

.emotion-2 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-2:hover:active {
  background-color: transparent;
}

<button
  className="emotion-3"
>
  <span
    className="emotion-1"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-edit wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267zm11.445-9.105l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M14.046 8.45L5.93 16.567 6 17.91l1.344.07 8.118-8.117-1.415-1.414zm1.415-1.415l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414zM4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <span
    className="emotion-2"
  >
    Button
  </span>
</button>
`;

exports[`Button (Highlight) Snapshots renders a medium, highlight button with an icon and a data label 1`] = `
.emotion-0 {
  display: inline-block;
}

.emotion-0 svg {
  display: block;
}

.emotion-0 .wd-icon-fill {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-fill {
  fill: #333d47;
}

.emotion-0 .wd-icon-accent {
  fill: #7b858f;
}

.emotion-0:hover .wd-icon-accent {
  fill: #333d47;
}

.emotion-0 .wd-icon-background {
  fill: transparent;
}

.emotion-0:hover .wd-icon-background {
  fill: transparent;
}

.emotion-0 svg {
  width: 24px;
  height: 24px;
}

.emotion-4 {
  box-sizing: border-box;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  font-size: 13px;
  border-radius: 999px;
  border: 2px solid transparent;
  box-shadow: none;
  position: relative;
  cursor: pointer;
  outline: none;
  -webkit-transition: all 120ms ease-in;
  transition: all 120ms ease-in;
  background-color: #f0f1f2;
  border-color: #f0f1f2;
  color: #005cb9;
  min-width: 96px;
  height: 40px;
  padding: 0 14px;
}

.emotion-4:hover:active {
  -webkit-transition-duration: 40ms;
  transition-duration: 40ms;
}

.emotion-4:disabled,
.emotion-4:disabled:active {
  cursor: default;
  box-shadow: none;
}

.emotion-4 span .wd-icon-fill,
.emotion-4 span .wd-icon-accent {
  -webkit-transition: fill 120ms ease-in;
  transition: fill 120ms ease-in;
  fill: #005cb9;
}

.emotion-4:focus {
  background-color: #f0f1f2;
  border-color: transparent;
  color: #005cb9;
}

.emotion-4:focus span .wd-icon-fill,
.emotion-4:focus span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-4:hover:focus {
  background-color: #dfe2e6;
}

.emotion-4:active,
.emotion-4:focus:active,
.emotion-4:hover:active {
  background-color: #ced3d9;
  border-color: transparent;
  color: #005cb9;
}

.emotion-4:active span .wd-icon-fill,
.emotion-4:focus:active span .wd-icon-fill,
.emotion-4:hover:active span .wd-icon-fill,
.emotion-4:active span .wd-icon-accent,
.emotion-4:focus:active span .wd-icon-accent,
.emotion-4:hover:active span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-4:hover {
  background-color: #dfe2e6;
  border-color: transparent;
  color: #005cb9;
}

.emotion-4:hover span .wd-icon-fill,
.emotion-4:hover span .wd-icon-accent {
  fill: #005cb9;
}

.emotion-4:disabled,
.emotion-4:active:disabled,
.emotion-4:focus:disabled,
.emotion-4:hover:disabled {
  background-color: #f6f7f8;
  border-color: transparent;
  color: #5e6a75;
}

.emotion-4:disabled span .wd-icon-fill,
.emotion-4:active:disabled span .wd-icon-fill,
.emotion-4:focus:disabled span .wd-icon-fill,
.emotion-4:hover:disabled span .wd-icon-fill,
.emotion-4:disabled span .wd-icon-accent,
.emotion-4:active:disabled span .wd-icon-accent,
.emotion-4:focus:disabled span .wd-icon-accent,
.emotion-4:hover:disabled span .wd-icon-accent {
  fill: #b9c0c7;
}

.emotion-4:not([disabled]):focus,
.emotion-4:not([disabled]):active {
  border-color: transparent;
  -webkit-animation: animation-72u8ku 100ms;
  animation: animation-72u8ku 100ms;
  box-shadow: 0 0 0 2px #ffffff,0 0 0 4px #005cb9;
}

.emotion-1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-left: 4px;
}

.emotion-2 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 700;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 14px;
  padding: 0 8px;
}

.emotion-2:hover:active {
  background-color: transparent;
}

.emotion-3 {
  position: relative;
  text-overflow: ellipsis;
  overflow: hidden;
  white-space: nowrap;
  font-weight: 400;
  font-family: "Roboto","Helvetica Neue","Helvetica","Arial",sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  font-size: 16px;
  padding-right: 8px;
  font-size: 14px;
}

.emotion-3:hover:active {
  background-color: transparent;
}

<button
  className="emotion-4"
>
  <span
    className="emotion-1"
  >
    <span
      className="emotion-0"
      dangerouslySetInnerHTML={
        Object {
          "__html": "<svg xmlns=\\"http://www.w3.org/2000/svg\\" width=\\"24\\" height=\\"24\\" class=\\"wd-icon-edit wd-icon\\" focusable=\\"false\\" role=\\"presentation\\" viewBox=\\"0 0 24 24\\"><g fill-rule=\\"evenodd\\" class=\\"wd-icon-container\\"><path d=\\"M4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267zm11.445-9.105l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414z\\" class=\\"wd-icon-background\\"/><path fill-rule=\\"nonzero\\" d=\\"M14.046 8.45L5.93 16.567 6 17.91l1.344.07 8.118-8.117-1.415-1.414zm1.415-1.415l1.414 1.415 1.414-1.415-1.414-1.414-1.414 1.414zM4.016 16.14c.002-.271.16-.65.35-.839L16.522 3.146a.5.5 0 0 1 .7-.006l3.548 3.548a.497.497 0 0 1-.006.7L8.61 19.544a1.382 1.382 0 0 1-.839.35l-3.267.016A.502.502 0 0 1 4 19.407l.016-3.267z\\" class=\\"wd-icon-fill\\"/></g></svg>",
        }
      }
    />
  </span>
  <span
    className="emotion-2"
  >
    Button
  </span>
  <span
    className="button-label-data emotion-3"
  >
    1:00
  </span>
</button>
`;
